--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Crear nuevo repositorio en Git Hub</h1>
+    <p>Una vez creada tu cuenta de Git Hub y haber descaragado Git:<br>
+        - Creamos un nuevo repositorio, le agregamos descripción, si es público o privado. <br>
+        -Vamos a la carpeta donde están los archivos que queremos subir.<br>
+        -Hacemos click derecho, dentro de la carpeta y GIT BASH HERE. <br>
+        -Eso abrirá Git y allí vamos a seguir estos pasos.<br>
+
+
+    </p>
+<ol>
+    <li>git init /ENTER</li>
+    <li>git add . /ENTER. </li>
+    <li> git commit -m "mensaje"/ENTER
+    </li>
+    <li>git branch -M elnombredelbrach/ENTER
+    </li>
+    <li> git remote add origin https://github.com/Cassfsd/nuevo-repo.git/ENTER
+    </li> Esta línea te la da el Git Hub, podés copiar y pegar tal cual. Git no te permitirá hacer ctrl paste, así que debrás hacerlo con el click derecho.
+    <li> git push -u origin Casandra/ENTER</li>
+</ol>
+Recuerda que el nombre de las ramas debe coincidir, 
 </body>
 </html>
